--- a/.gitignore
+++ b/.gitignore
@@ -112,7 +112,7 @@ buildNumber.properties
 .mvn/wrapper/maven-wrapper.jar
 
 ### auth key ###
-.properties
+*.properties
 
 
 # End of https://www.gitignore.io/api/java,maven,eclipse,java-web
